--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/veg-icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FreshVeg - Farm Fresh Organic Vegetables</title>
+    <title>Frutify - Fresh Fruits &amp; Organic Vegetables</title>
   </head>
   <body>
     <div id="root"></div>
